# gridfinity-plate-generator

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  flake.nix  gridfinity_plate_generator  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: constraints.txt
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
gridfinity_plate_generator/: __main__.py  config.py  gridfinity_generator.py
src/gridfinity_plate_generator/: __main__.py  app.py  app.py.bak  config.py  gridfinity_generator.py
tests/: __init__.py  test_cli.py  test_gridfinity_generator.py  test_main.py
