[tool.poetry]
name = "gridfinity-plate-generator"
version = "0.1.0"
description = "Gridfinity Plate Generator"
authors = ["Jakob Guldberg Aaes <jakob1379@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jakob1379/gridfinity-plate-generator"
repository = "https://github.com/jakob1379/gridfinity-plate-generator"
documentation = "https://gridfinity-plate-generator.readthedocs.io"
classifiers = [
	"Development Status :: 1 - Planning",
]
packages = [
	{ include = "gridfinity_plate_generator", from = "." },
]

[tool.poetry.urls]
Changelog = "https://github.com/jakob1379/gridfinity-plate-generator/releases"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
typer = "^0.9.0"
cadquery = "2.3.1"
streamlit = "^1.26.0"
numpy-stl = "^3.0.1"
plotly = "^5.16.1"
python-dotenv = "^1.0.0"
# cadquery-ocp = "7.7.1.0"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
gridfinity-generator = 'gridfinity_plate_generator.__main__:app'

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
rich = "^13.5.2"
commitizen = "^3.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-datadir = "^1.4.1"
pylsp-mypy = "^0.6.7"
python-lsp-server = "^1.7.4"
python-lsp-black = "^1.3.0"
pylsp-rope = "^0.1.11"
mypy = "^1.5.1"

[tool.coverage.paths]
source = ["./gridfinity_plate_generator"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["gridfinity_plate_generator", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = true
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
python_version = "3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pycln]
all = true

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
	  \.venv
	| \.git
	| \.mypy_cache
)/
'''
