[project]
name = "gridfinity-plate-generator"
version = "0.1.0"
description = "Gridfinity Plate Generator"
authors = [{ name = "Jakob Guldberg Aaes", email = "jakob1379@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
classifiers = ["Development Status :: 1 - Planning"]
dependencies = [
    "click>=8.1.7",
    "typer>=0.9.0",
    "cadquery==2.3.1",
    "streamlit>=1.26.0",
    "numpy-stl>=3.0.1",
    "plotly>=5.16.1",
    "python-dotenv>=1.0.0",
    "numpy<2",
]

[project.urls]
Homepage = "https://github.com/jakob1379/gridfinity-plate-generator"
Repository = "https://github.com/jakob1379/gridfinity-plate-generator"
# Documentation = "https://gridfinity-plate-generator.readthedocs.io"
Changelog = "https://github.com/jakob1379/gridfinity-plate-generator/releases"

[tool.hatch.build.targets.sdist]
include = ["./gridfinity_plate_generator"]

[tool.hatch.build.targets.wheel]
include = ["./gridfinity_plate_generator"]

[tool.hatch.build.targets.wheel.sources]
"./gridfinity_plate_generator" = "gridfinity_plate_generator"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "poethepoet>=0.34.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]
jga-dev = [
    "black>=25.1.0",
    "dap-python>=0.5.0",
    "debugpy>=1.8.14",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "python-lsp-server[all]>=1.12.2",
    "rich>=14.0.0",
    "ruff>=0.11.12",
]

[tool.coverage.paths]
source = ["./gridfinity_plate_generator"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["gridfinity_plate_generator", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = true
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
python_version = "3.11"

[tool.pycln]
all = true

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
	  \.venv
	| \.git
	| \.mypy_cache
)/
'''
